--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -117,10 +117,10 @@ figcaption {
     margin-top: 0.5rem;
 }
 
-ol, ul {
-    padding-left: 4rem !important;
-    padding-top: 0 !important;
-    margin:0;
+.baseContainer ol, .baseContainer ul {
+    padding-left: 3rem;
+    padding-top: 0 ;
+    margin: 0rem ;
 }
 
 
