improved overall html and css structure

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/footer.css">
 
 <footer class="container-fluid bg-light border-top pt-4 mt-4">
     <div class="container">
