--- a/_includes/media.html
+++ b/_includes/media.html
@@ -1,7 +1,7 @@
 <!-- _includes/social_links.html -->
-<!-- <link rel="stylesheet" href="assets/css/media.css"> -->
+<link rel="stylesheet" href="/assets/css/media.css">
 
-<ul class="list-inline text-center">
+<ul class="list-inline text-center social-links">
     {% if site.github_username %}
     <li class="list-inline-item">
         <a href="https://github.com/{{ site.github_username }}">
