--- a/assets/css/post-preview.css
+++ b/assets/css/post-preview.css
@@ -1,8 +1,8 @@
 .post-list{
     padding-top: 20px;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    /* border-left: 1px solid #ddd; */
+    /* border-right: 1px solid #ddd; */
+    /* border-bottom: 1px solid #ddd; */
 }
 
 .post-preview{
