improved readability in index

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,8 +22,8 @@
     <style>
         /* Custom styling for nav pills */
         .nav-pills .nav-link:not(.active) {
-            background-color: #f8f9fa;
-            border: 1px solid #dee2e6;
+            background-color: #ffffff;
+            /* border: 1px solid #ffffff; */
             color: #6c757d;
             transition: all 0.2s ease-in-out;
         }
@@ -35,8 +35,16 @@
         }
         
         .nav-pills .nav-link.active {
-            background-color: #0d6efd;
-            border: 1px solid #0d6efd;
+            background-color: #0d6dfd00;
+            /* border: 1px solid #0d6efd; */
+            color: #0d6efd;
+        }
+
+        .nav-pills .nav-item {
+            border-bottom: 2px solid #bbbbbb;
+            width: auto;
+            margin-left: 10px;
+            margin-right: 10px;
         }
     </style>
 
@@ -106,12 +114,10 @@
         <!-- About me section -->
         <div class="row justify-content-center">
             <!-- Row 1: About me title -->
-
-            
             <!-- Row 2: Image and text -->
             <div class="row">
                 <div class="col-lg-4 col-md-5 col-12 mb-3 d-flex justify-content-center">
-                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid" style="max-width: 200px; border-radius: 10px;">
                 </div>
                 <div class="col-lg-8 col-md-7 col-12 d-flex flex-column justify-content-center">
                     <div class="fw-light">
