--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,9 @@
 .about-me {
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: #f5f7f8;
-    border-radius: 12px;
+    /* background-color: #4a87a5; */
+    /* border-radius: 12px; */
+    border-bottom: 2px solid #4a87a5;
     padding: 20px;
 }
 
