improved ui responsive

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -110,14 +110,14 @@
 
     {% include navbar.html %}
 
-    <div class="container about-me main-hero" >
+    <div class="container about-me" >
         <!-- About me section -->
         <div class="row justify-content-center">
             <!-- Row 1: About me title -->
             <!-- Row 2: Image and text -->
             <div class="row">
                 <div class="col-lg-4 col-md-5 col-12 mb-3 d-flex justify-content-center">
-                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid" style="max-width: 200px; border-radius: 10px;">
+                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid">
                 </div>
                 <div class="col-lg-8 col-md-7 col-12 d-flex flex-column justify-content-center">
                     <div class="fw-light">
@@ -139,6 +139,8 @@
             </div>
         </div>
     </div>
+
+    <hr>
 
     <div class="container lists">
         <div class="row mt-4 list">
