prevent style leaks from images

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -117,7 +117,7 @@
             <!-- Row 2: Image and text -->
             <div class="row">
                 <div class="col-lg-4 col-md-5 col-12 mb-3 d-flex justify-content-center">
-                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid">
+                    <img src="/images/logogriscuadrado.png" alt="Logo" class="img-fluid img-fluid-hero">
                 </div>
                 <div class="col-lg-8 col-md-7 col-12 d-flex flex-column justify-content-center">
                     <div class="fw-light">
