--- a/assets/css/post-preview.css
+++ b/assets/css/post-preview.css
@@ -18,7 +18,7 @@
     margin-left: 0;
     margin-right: 0;
     /* border-radius: 12px; */
-    /* border-bottom: 2px solid #736e6e; */
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .post-preview:hover{
@@ -34,6 +34,8 @@
     height: 200px;
     padding:0;
     margin:0;
+    border-radius: 8px;
+    border: #b0bcc0 1px solid;
 }
 
 .post-preview a{
